Changes to be committed: 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   model/user_authentication.go 	modified:   model/user_photoinfo.go 	modified:   router/photo_server.go 	modified:   service/photo_handle.go 	modified:   service/user_basic_management.go 	modified:   service/user_info.go
