# router/photo_server.go
@@ -20,5 +20,9 @@ func Router() *gin.Engine {
 	r.POST("/user/upload_user-email", service.UploadUserEmail)
 	r.POST("/user/upload_user-phone", service.UploadUserPhone)
 	r.POST("/api/photo/upload", service.UploadPhoto)
+	r.POST("/user/download_user-homepage-message", service.SearchUserHomePageInfo)
+	r.POST("/user/download_user-basic-message", service.SearchUserBasicInfo)
+	r.POST("/api/photo/delete", service.DeleteUserPhoto)
+	
 	return r
 }
